All spring projects with all tests running flawlessly

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa") // libs to use JPA in your project
 	implementation("com.h2database:h2") // libs to use a H2 database
+	testImplementation group: 'org.junit.platform', name: 'junit-platform-suite-engine', version: '1.11.2'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.2'
+	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")
 }
 
 tasks.named('test') {
