--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:h2:mem:automacorp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=
 spring.datasource.username=sa
 spring.datasource.password=1234
 spring.datasource.driverClassName=org.h2.Driver
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # Spring boot : activate H2 console
 spring.h2.console.enabled=true
