--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "@vue/tsconfig": "^0.5.1",
+    "typescript": "^5.6.3",
+    "vue": "^3.5.12",
+    "vue-tsc": "^2.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
