--- a/StudiTradeV2/app/src/main/AndroidManifest.xml
+++ b/StudiTradeV2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.StudiTradeV2"
         tools:targetApi="31">
         <activity
+            android:name=".SellFilesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_sell_files"
+            android:theme="@style/Theme.StudiTradeV2" />
+        <activity
             android:name=".ProfileActivity"
             android:exported="false"
             android:label="@string/title_activity_profile"
