--- a/StudiTradeV2/app/src/main/AndroidManifest.xml
+++ b/StudiTradeV2/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.StudiTradeV2"
         tools:targetApi="31">
         <activity
-            android:name=".SellFilesActivity"
+            android:name=".SellActivity"
             android:exported="false"
             android:label="@string/title_activity_sell_files"
             android:theme="@style/Theme.StudiTradeV2" />
@@ -28,14 +28,9 @@
             android:label="@string/title_activity_settings"
             android:theme="@style/Theme.StudiTradeV2" />
         <activity
-            android:name=".PurshasedActivity"
+            android:name=".PurchasedActivity"
             android:exported="false"
             android:label="@string/title_activity_purshased"
-            android:theme="@style/Theme.StudiTradeV2" />
-        <activity
-            android:name=".SellActivity"
-            android:exported="false"
-            android:label="@string/title_activity_sell"
             android:theme="@style/Theme.StudiTradeV2" />
         <activity
             android:name=".FavoritesActivity"
