--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 	// Email
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.4.1'
 	implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.4.1'
 
 	//Stripe
 	implementation group: 'com.stripe', name: 'stripe-java', version: '28.2.0'
