--- a/StudiTradeV2/app/src/main/AndroidManifest.xml
+++ b/StudiTradeV2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -15,6 +16,11 @@
         android:theme="@style/Theme.StudiTradeV2"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".PdfViewerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_pdf_viewer"
+            android:theme="@style/Theme.StudiTradeV2" />
         <activity
             android:name=".SellActivity"
             android:exported="false"
