--- a/StudiTradeV2/app/src/main/AndroidManifest.xml
+++ b/StudiTradeV2/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -35,11 +37,6 @@
             android:name=".SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings"
-            android:theme="@style/Theme.StudiTradeV2" />
-        <activity
-            android:name=".PurchasedActivity"
-            android:exported="false"
-            android:label="@string/title_activity_purshased"
             android:theme="@style/Theme.StudiTradeV2" />
         <activity
             android:name=".FavoritesActivity"
